# ai4os-ai4life-loader

./: .gitignore  Dockerfile  Dockerfile.cicd  JenkinsConstants.groovy  Jenkinsfile  LICENSE  README.md  ai4-metadata.yml  collection.json  f96fa9a324bdd7e56e162e1daa8895dd-box_prompts.npy  metadata.json  pyproject.toml  pyvenv.cfg  requirements.txt  tox.ini
.github/workflows/: filter_models.yml  git-repo-sync.yml
.sqa/: config.yml  docker-compose.yml  dockerfile
UI/: README.md  entrypoint.sh  launch.py  utils.py
ai4life/: README.md  __init__.py  config.py  filter_v0_5_models.py  tensor.py  utils.py
api/: __init__.py  config.py  import numpy as np.py  responses.py  schemas.py  utils.py
docs/: Makefile  conf.py  index.rst  make.bat
git_action/: filter_v0_5_models.py
models/: .gitignore  collection.json  filtered_models.json
notebooks/: 1.0-ai4life_start.ipynb
tests/: README.md  test_deepaas.py
tests/test_metadata/: test_requirements.py
tests/test_predictions/: conftest.py  selected_models.py  test_requirements.py
tests/test_training/: test_requirements.py
