[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ai4life"
authors = [
    { name = "Fahimeh Alibabaei", email = "khadijeh.alibabaei@kit.edu" },
]
description = "Support for inference of the AI4LIFE model on the marketplace."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: AI/ML/DL Researchers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]

[project.urls]
"Homepage" = "https://github.com/ai4os-hub/ai4life"
"Bug Tracker" = "https://github.com/ai4os-hub/ai4life/issues"

[tool.pytest.ini_options]
pythonpath = ["."]
env = [
    "AI4LIFE_DATA_PATH=data",
    "AI4LIFE_MODELS_PATH=models",
]
# Allow test files to share names
# https://docs.pytest.org/en/7.1.x/explanation/goodpractices.html
addopts = "--import-mode=importlib"

[tool.setuptools]
packages = [
    "ai4life",
    "ai4life.api",
]

[tool.setuptools.package-dir]
"ai4life.api" = "api"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { file = "VERSION" }

[project.entry-points."deepaas.v2.model"]
ai4life = "ai4life.api"
